Added little comments <

--- a/compose-CentOS_6/Dockerfile
+++ b/compose-CentOS_6/Dockerfile
@@ -1,6 +1,8 @@
 FROM centos:6
 VOLUME /sys/fs/cgroup /run /tmp
 ENV container=docker
+
+# Add influxDB offical repository first, then install influxDB and PHP7
 RUN echo $'[influxdb] \n\
 name = InfluxDB Repository - RHEL \$releasever \n\
 baseurl = https://repos.influxdata.com/rhel/\$releasever/\$basearch/stable \n\
@@ -19,7 +21,7 @@ gpgkey = https://repos.influxdata.com/influxdb.key \n'\
     && rpm -Uvh http://repo.mysql.com/mysql-community-release-el6-5.noarch.rpm \
     && yum install -y php70w php70w-cli php70w-common php70w-embedded php70w-interbase php70w-process php70w-xml
 
-
+# Install PHP-Composer
 WORKDIR /usr/local/share/php-composer
 RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
     && php -r "if (hash_file('SHA384', 'composer-setup.php') === '55d6ead61b29c7bdee5cccfb50076874187bd9f21f65d8991d46ec5cc90518f447387fb9f76ebae1fbbacf329e583e30') { echo 'Installer verified'; } else { echo 'Installer corrupt'; unlink('composer-setup.php'); } echo PHP_EOL;" \
@@ -29,6 +31,8 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" \
 
 WORKDIR /
 
+# Set environment virables
+# /influxdb will be the directory for storing influxDB data
 ENTRYPOINT export INFLUXDB_META_DIR=/influxdb/meta \
     && export INFLUXDB_DATA_DIR=/influxdb/data \
     && export INFLUXDB_DATA_WAL_DIR=/influxdb/wal \
